TODO
* add parent image support
  - bail out on read if parent is not set
* implement libvmdk_handle_set_maximum_number_of_open_handles
* vmdkmount: show device files for all previous snapshots
* vmdkinfo: print dirty status
* add support for parent images
* add support for zero-grain table entry support
* test multi segment sparse image support
* add and test flat image support
* build grain table
* descriptor file: put disk data base in fvalue table ?

* code clean up:
  - support and locale functions
* add glob functions
* debug output
  - descriptor file: disk database
  - extent file: flags
  - extent file: compression method

API
* add functions to access storage media data
* add functions to access extents

library
* implement grain cache
* fill offset table
* create handle to read a set of vmdk files
* add support for VMDK markers

File format
* complete COWD support

Deployment:
* update manuals
  - update libvmdk.3
  - update vmdkinfo.1
  - add vmdkmount.1
* create msvscpp files
* create macosx package files
* create codegear files

20121127
* worked on parent image support
* updated libvmdk.3 man page

20120924
* added extent data file sector restriction
* bug fixes
* code clean up

20120923
* worked on multi-file image support

20120922
* code clean up
* worked on descriptor file support
* worked on multi-file image support

20120921
* renamed segment file into extent file
* merged segment file and segment file handle
* worked on descriptor file support

20120920
* applied updates
* changes due to updates
* code clean up
* created debian package files

20100418
* added libcstring
* updated common, liberror, libnotify, libuna, libbfio, libsystem
* changed libvmdk_file to libvmdk_handle
* added support for multiple source files
* worked on descriptor file

20100314
* string fix in vmdkinfo
* moved file io handle into libvmdk_file

20100221
* updated common, liberror, libuna, libbfio
* libvmdk 2010 update
* worked on byte stream update